feat: adds blog

--- a/src/blog/2023/git-00-linux-day.mdx
+++ b/src/blog/2023/git-00-linux-day.mdx
@@ -5,23 +5,15 @@ slug: git-00-linux-day
 tags: [GIT, teaching, sharing, GitHub]
 year: '2023'
 date: '2023-11-26T17:00:00.000Z'
-domain: https://coluzziandrea.hashnode.dev/
-cover: https://cdn.hashnode.com/res/hashnode/image/upload/v1703341841143/WChhSSCcr.png?auto=format
-canonical: https://coluzziandrea.hashnode.dev/git/git-00-linux-day
-seoTitle: I Taught GIT to High School Students
-description: My Experience as Linux Day Mentor
-seriesSlug: git
-enableToc: true
-saveAsDraft: false
+cover: '/assets/blog/2023/linux-day/header.png'
+description: This blog post is not about a new technology or an hot tech trend that you would hear of nowadays, it's about my experience as Mentor for High School students. When & how I decided to teach GIT to high school students?
 ---
-
-<img src="/assets/blog/2023/linux-day/header.png" alt="drawing" width="55%" />
 
 # I Taught GIT to High School Students
 
-This blog post is not about a new technology or an hot tech trend that you would hear of nowadays, it's about my experience as **Mentor** for High School students.
+This blog post is not about a new technology or an hot tech trend that you would hear of nowadays, it's about my experience as **Mentor** for High School students. When & how I decided to teach GIT to high school students?
 
-![image](https://cdn.jsdelivr.net/gh/coluzziandrea/andreacoluzzi-blog/2023/git/how-i-taught-git-to-highschool-students/photo/1700473966553.jpeg)
+![image](/assets/blog/2023/linux-day/photo/1700473966553.jpeg)
 
 # When & how I decided to teach GIT to high school students?
 
@@ -31,7 +23,7 @@ Since I am the founder & one of the admins of [Latina In Tech](https://www.latin
 
 So we gladly accepted to collaborate with Exo, [Latina LUG](https://www.latinalug.it/) (which is a Linux User Group based in Latina) and [Open Hub Lazio](https://openhublazio.it/), which was the location choosed to host this event.
 
-![image](https://cdn.jsdelivr.net/gh/coluzziandrea/andreacoluzzi-blog/2023/git/how-i-taught-git-to-highschool-students/photo/logo.jpg)
+![image](/assets/blog/2023/linux-day/photo/logo.jpeg)
 
 We as a community are really focused on **knowledge sharing**, and this was a perfect opportunity for us to get involved in sharing things, and it was also a great way to get in touch with _young techies_ like we were a long time ago. 😉
 
@@ -43,7 +35,7 @@ I must say that helping him out preparing the slides made me feel like I really 
 
 The only experience in teaching I had before was back in 10 years ago, when I helped my younger cousin to study math. This was not comparable to the situation I was facing, but it was a memory that helped me during this project.
 
-![image](https://cdn.jsdelivr.net/gh/coluzziandrea/andreacoluzzi-blog/2023/git/how-i-taught-git-to-highschool-students/photo/1700473969802.jpeg)
+![image](/assets/blog/2023/linux-day/photo/1700473969802.jpeg)
 
 In fact, I was not going to teach math to my cousin, but I was going to teach GIT to a bunch of high school students, which is a completely **different thing**!
 
@@ -62,7 +54,7 @@ The presentation was structured the following way:
 
 I tried to insert in the slides as much images I could, to give a visual impact to the presented concepts. Like in the following slide extracted from the deck above:
 
-![image](https://cdn.jsdelivr.net/gh/coluzziandrea/andreacoluzzi-blog/2023/git/how-i-taught-git-to-highschool-students/photo/slide-01.jpg)
+![image](/assets/blog/2023/linux-day/photo/slide-01.jpg)
 
 Unfortunately I couldn't go through all the slides because of _time constraints_, but I gave the students an exercise to solve instead.
 
@@ -83,7 +75,7 @@ So the **assigned task** was to:
 
 The final result was something like this (which is the **agenda of the event**, which I used as a template for the exercise):
 
-![image](https://cdn.jsdelivr.net/gh/coluzziandrea/andreacoluzzi-blog/2023/git/how-i-taught-git-to-highschool-students/photo/agenda.png)
+![image](/assets/blog/2023/linux-day/photo/agenda.png)
 
 # Retrospective
 
